[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/obstacles/lethal/FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Obstacles/falling platform 32x16.png" type="Texture" id=2]
[ext_resource path="res://Assets/Obstacles/falling platform shake 32x16.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 68, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 34, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Shake",
"speed": 48.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 56.5 )

[node name="FallingPlatform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Default"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
visible = false
position = Vector2( 0, 11 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PDetect"]
visible = false
position = Vector2( 0, 47.5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PDetect" to="." method="_on_PDetect_body_entered"]
